tests/baselines/reference/invalidUseOfTypeAsNamespace.errors.txt
invalidUseOfTypeAsNamespace.ts(4,16): error TS2702: 'OhNo' only refers to a type, but is being used as a namespace here.


==== invalidUseOfTypeAsNamespace.ts (1 errors) ====
    interface OhNo {
    }
    
    declare let y: OhNo.hello;
                   ~~~~
!!! error TS2702: 'OhNo' only refers to a type, but is being used as a namespace here.
    